--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
 }
 
 /* add styles here */
-/* Madhusudan */
+/* Madhusudan submission*/
 
 header {
    background-image: url(./images/florence.jpg);
